--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ html {
 
 body {
   font: normal 16px Georgia, serif;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
   margin: 0;
   font: bold 24px;
+  text-align: center
 }
 
 p{
@@ -33,7 +36,13 @@ a:focus {
   font-size: 1.2em;
 }
 
-#colorstrip{
-    height: 0px;
-    border-bottom:solid 1000px lightyellow;
-}​
+header {
+  border: 1px solid lightblue;
+  padding: 1em;
+}
+
+#poem {
+  background-color: #FFF8C6;
+  padding-top: 15px;
+  padding-bottom: 15px; 
+}
