--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
 h1 {
   margin: 0;
   font: bold 24px;
-  text-align: center
+  text-align: center;
 }
 
 h3 {
-  text-align: center
+  text-align: center;
 }
 
 p{
@@ -53,6 +53,7 @@ header {
 
 #clue {
   background-color: #FFF8C6;
-  padding-top: 15px;
-  padding-bottom: 15px; 
+  padding-top: 30px;
+  padding-bottom: 30px;
+  width: 50%; 
 }
