change clue color

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 }
 
 #clue {
-  background-color: #FFF8C6;
+  background-color: #90EE90;
   padding-top: 30px;
   padding-bottom: 30px;
   width: 50%; 
