center align headers

--- a/josh.css
+++ b/josh.css
@@ -1,6 +1,22 @@
+h1 {
+  margin: 0;
+  font: bold 24px;
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+
 #clue {
   background-color: #90EE90;
   padding-top: 30px;
   padding-bottom: 30px;
   width: 50%; 
+  text-align: center;
 }
