--- a/josh.css
+++ b/josh.css
@@ -1,15 +1,20 @@
 h1 {
   margin: 0;
-  font: bold 24px;
+  font: bold 100px;
   text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: 90 px;
 }
 
 h3 {
   text-align: center;
 }
 
-h3 {
-  text-align: center;
+p {
+  font-size: 100px;
 }
 
 
