--- a/josh.css
+++ b/josh.css
@@ -1,20 +1,21 @@
 h1 {
   margin: 0;
-  font: bold 100px;
+  font: bold 75px;
   text-align: center;
 }
 
 h2 {
   text-align: center;
-  font-size: 90 px;
+  font-size: 50 px;
 }
 
 h3 {
   text-align: center;
+  text-size: 80px;
 }
 
 p {
-  font-size: 100px;
+  font-size: 75px;
 }
 
 
