--- a/josh.css
+++ b/josh.css
@@ -6,7 +6,7 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 75 px;
+  text-size: 75 px;
 }
 
 h3 {
@@ -15,7 +15,7 @@ h3 {
 }
 
 p {
-  font-size:60px;
+  text-size:60px;
 }
 
 
