--- a/josh.css
+++ b/josh.css
@@ -6,16 +6,16 @@ h1 {
 
 h2 {
   text-align: center;
-  text-size: 75 px;
+  font--size: 75 px;
 }
 
 h3 {
   text-align: center;
-  text-size: 60px;
+  font-size: 60px;
 }
 
 p {
-  text-size:60px;
+  font-size:60px;
 }
 
 
